--- a/src/resources/convertor_page_data_v2.html
+++ b/src/resources/convertor_page_data_v2.html
@@ -20,6 +20,10 @@
           </div>
         </div>
       </div>
+      <div class="loading-div">
+        <i class="fa fa-spinner fa-pulse fa-3x fa-fw" style="display: block;margin-left: 50vw;"></i>
+        <span style="color: #333;height: 50px;width: 120px;margin-left: calc(50vw - 20px);display: block;"><font style="color: #333;font-weight: bolder;">模型信息加载中...</font></span>
+      </div>
 
       <!--展示的主面板-->
       <div class="row" style="height: 45%;width: 100%;">
@@ -177,6 +181,20 @@ body {
    width: max-content !important;
    height:auto !important;
 }
+
+.loading-div {
+      width: 1800px;
+      height: 720px;
+      display: table-cell;
+      vertical-align: middle;
+      color: #555;
+      overflow: hidden;
+      text-align: center;
+    }
+.loading-div::before {
+  display: inline-block;
+  vertical-align: middle;
+} 
 </style>
 <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -188,6 +206,7 @@ body {
 
 <link rel="stylesheet" href="http://localhost:6003/css/materialize.min.css">
 <link rel="stylesheet" href="http://localhost:6003/css/bootstrap.min.css" >
+<link rel="stylesheet" href="http://localhost:6003/css/font-awesome.min.css">
 
 <script src="http://localhost:6003/js/jquery.min.js"></script>
 <script src="http://localhost:6003/js/materialize.min.js"></script>
@@ -254,6 +273,7 @@ $(document).ready(function(){
         }
       }
 
+      $(".loading-div").hide(); // 隐藏加载提示
       console.log("display test data distribution...");
       display_data_bar_chart(class_labels, class_ratios, "测试数据集各类别分布",  "数据占比","类别", "占比", "bar_chart_testdata_container");
       console.log("test data distribution bar chart displayed.");
