change for tables

--- a/src/resources/model_simulate_page_v2.html
+++ b/src/resources/model_simulate_page_v2.html
@@ -10,52 +10,52 @@
 
     <div style="margin-top: 20px;display: block;">
 
-        <div style="background: rgba(238,238,238);width: 350px;height: 350px;display: inline-block;">
+        <div style="background: rgba(238,238,238,0.4);width: 350px;height: 350px;display: inline-block;">
           <div>
             <div id="model_layers_vis_tab_caption" style="font-size: large;font-weight: bold;text-align: center;"><font style="color: #333;font-weight: bold;">仿真配置结果评估</font></div>
             <table id="layer_conf_val" style="width: 260px;margin-left:40px;margin-top: 70px;border: solid 3px #D6D6D6;">
                 <caption class="white-text" style="caption-side: top;text-align: center;"></caption>
                 <tr style="height: 25px; border: solid 2px #D6D6D6;color: #333;">
-                  <td style="font-size: medium;font-weight: bold;padding-left: 15px;border: solid 2px #D6D6D6;">膜电压阈值</td>
+                  <td style="font-size: medium;font-weight: bold;padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE">膜电压阈值</td>
                   <td id="simulate_vthresh"></td>
                 </tr>
                 <tr style="height: 25px;border: solid 2px #D6D6D6;color: #333;"">
-                  <td style="font-size: medium;font-weight: bold;padding-left: 15px;border: solid 2px #D6D6D6;">神经元时间步长</td>
+                  <td style="font-size: medium;font-weight: bold;padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE">神经元时间步长</td>
                   <td id="simulate_neuron_dt"></td>
                 </tr>
                 <tr style="height: 25px;border: solid 2px #D6D6D6;color: #333;"">
-                  <td style="font-size: medium;font-weight: bold;padding-left: 15px;border: solid 2px #D6D6D6;">突触时间步长</td>
+                  <td style="font-size: medium;font-weight: bold;padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE">突触时间步长</td>
                   <td id="simulate_synapse_dt"></td>
                 </tr>
                 <tr style="height: 25px;border: solid 2px #D6D6D6;color: #333;"">
-                  <td  style="font-size: medium;font-weight: bold;padding-left: 15px;border: solid 2px #D6D6D6;">延迟</td>
+                  <td  style="font-size: medium;font-weight: bold;padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE">延迟</td>
                   <td id="simulate_delay"></td>
                 </tr>
                 <tr style="height: 25px;border: solid 2px #D6D6D6;color: #333;"">
-                  <td style="font-size: medium;font-weight: bold;padding-left: 15px;border: solid 2px #D6D6D6;">仿真时长</td>
+                  <td style="font-size: medium;font-weight: bold;padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE">仿真时长</td>
                   <td id="simulate_dura"></td>
                 </tr>
                 <tr style="height: 25px;border: solid 2px #D6D6D6;color: #333;"">
-                  <td style="font-size: medium;font-weight: bold;color: rgb(161, 11, 247);padding-left: 15px;border: solid 2px #D6D6D6;">准确率</td>
+                  <td style="font-size: medium;font-weight: bold;color: rgb(161, 11, 247);padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE">准确率</td>
                   <td id="simulate_acc" style="color: rgb(161, 11, 247);"></td>
                 </tr>    
             </table>
           </div>
         </div>
 
-        <div style="background: rgba(238,238,238);width: 350px;height: 350px;display: inline-block;">
+        <div style="background: rgba(238,238,238,0.4);width: 350px;height: 350px;display: inline-block;">
           <div style="font-size: large;font-weight: bold;text-align: center;margin-left: 40px;"><font style="color: #333;font-weight: bold;">放电次数均值方差统计</font></div>
           <table id="snn_layers_spike_table" style="width: 280px;margin-left:40px;margin-top: 70px;border: solid 3px #D6D6D6;">
             <caption class="white-text" style="caption-side: top;text-align: center;"></caption>
             <tr style="height: 25px; border: solid 2px #D6D6D6;color: #333;">
-              <td style="font-size: medium;font-weight: bold;padding-left: 15px;border: solid 2px #D6D6D6;">层编号</td>
-              <td style="font-size: medium;font-weight: bold;padding-left: 15px;border: solid 2px #D6D6D6;">放电次数均值</td>
-              <td style="font-size: medium;font-weight: bold;padding-left: 15px;border: solid 2px #D6D6D6;">放电次数方差</td>
+              <td style="font-size: medium;font-weight: bold;padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE">层编号</td>
+              <td style="font-size: medium;font-weight: bold;padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE">放电次数均值</td>
+              <td style="font-size: medium;font-weight: bold;padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE">放电次数方差</td>
             </tr>
           </table>
         </div>
 
-        <div style="background: rgba(238,238,238);width: 500px;height: 350px;display: inline-block;">
+        <div style="background: rgba(238,238,238,0.4);width: 500px;height: 350px;display: inline-block;">
           <div>
             <div id="neurons_v_out_div" style="font-size: large;font-weight: bold;text-align: center;"><font style="color: #333;font-weight: bold;">神经元放电</font></div>
             <div style="width: 360px;margin-left: 40px;">
@@ -76,13 +76,13 @@
         </div>
     </div>
     <div style="margin-top: 5px;display: block;">
-        <div style="display: inline-block;width: 610px;height: 550px;background: rgba(238,238,238)">
+        <div style="display: inline-block;width: 610px;height: 550px;background: rgba(238,238,238,0.4);">
           <div id="model_input_spike_cap" style="font-size: large;font-weight: bold;text-align: center;"><font style="color: #333;font-weight: bold;">脉冲神经网络输入层脉冲</font></div>
           <div id="input_spike_charts" style="width: 460px;height: 320px;margin-left: 70px;display: inline-block;margin-top: 40px;"></div>
           <ul id="input_spike_sample_imgs_ul" style="height: 60px;width: 460px;overflow: auto; white-space: nowrap;display: block;margin-left: 55px;margin-top: 20px;">
           </ul>
         </div>
-        <div style="width: 590px;height: 550px;display: inline-block;margin: left 20px;vertical-align: top;background: rgba(238,238,238)">
+        <div style="width: 590px;height: 550px;display: inline-block;margin: left 20px;vertical-align: top;background: rgba(238,238,238,0.4);">
             <div id="model_layers_vis_tab_caption" style="font-size: large;font-weight: bold;text-align: center;"><font style="color: #333;font-weight: bold;">脉冲神经网络输出层脉冲</font></div>
             <span style="font-size: smaller;margin-left: 160px;color: rgb(133, 4, 255);">红色标记图像为输出层预测错误</span>
             <div id="model_layers_vis_tab_caption" style="font-size: small;font-weight: bold;text-align: center;"><font style="color: #333;font-weight: bold;">统计计数</font></div>
@@ -218,10 +218,14 @@ body {
                       let td_child = document.createElement("td");
                       td_child.innerText = "标签名称:";
                       td_child.style.width = "80px";
+                      td_child.style.backgroundColor = "#EEEEEE";
+                      td_child.style.border = "solid 2px #D6D6D6";
                       document.getElementById("out_labels").appendChild(td_child);
 
                       document.getElementById("out_counts_tr").innerHTML = '';
                       td_child = document.createElement("td");
+                      td_child.style.backgroundColor = "#EEEEEE";
+                      td_child.style.border = "solid 2px #D6D6D6";
                       td_child.innerText = "计数值:";
                       td_child.style.width = "80px";
                       document.getElementById("out_counts_tr").appendChild(td_child);
@@ -230,11 +234,13 @@ body {
                         let td_child = document.createElement("td");
                         td_child.innerText = spike_counts[j];
                         td_child.style.width = "33px";
+                        td_child.style.border = "solid 2px #D6D6D6";
                         document.getElementById("out_counts_tr").appendChild(td_child);
 
                         td_child = document.createElement("td");
                         td_child.innerText = test_img_spikes[i].cls_names[j];
                         td_child.style.width = "33px";
+                        td_child.style.border = "solid 2px #D6D6D6";
                         document.getElementById("out_labels").appendChild(td_child);
                       }
 
